error_log_v3.txt
install
+- install abi
   +- compile exe abi Debug native 4 errors
lib\features\ai\federated\mod.zig:1:1: error: unable to load 'mod.zig': FileNotFound
lib\features\ai\mod.zig:20:31: note: file imported here
pub const federated = @import("federated/mod.zig");
                              ^~~~~~~~~~~~~~~~~~~
lib\features\ai\optimization\mod.zig:1:1: error: unable to load 'mod.zig': FileNotFound
lib\features\ai\mod.zig:21:34: note: file imported here
pub const optimization = @import("optimization/mod.zig");
                                 ^~~~~~~~~~~~~~~~~~~~~~
lib\features\ai\reinforcement_learning\mod.zig:1:1: error: unable to load 'mod.zig': FileNotFound
lib\features\ai\mod.zig:19:44: note: file imported here
pub const reinforcement_learning = @import("reinforcement_learning/mod.zig");
                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lib\features\ai\transformer\mod.zig:1:1: error: unable to load 'mod.zig': FileNotFound
lib\features\ai\mod.zig:18:33: note: file imported here
pub const transformer = @import("transformer/mod.zig");
                                ^~~~~~~~~~~~~~~~~~~~~
error: 4 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\tools\\cli\\main.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name abi --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

Build Summary: 1/4 steps succeeded (1 failed)
install transitive failure
+- install abi transitive failure
   +- compile exe abi Debug native 4 errors

error: the following build command failed with exit code 1:
.zig-cache\o\2b51c623da3485ba360e0f5597b3605c\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x56c835d9 -Z2f35e651f86ba283 --color off
